# Beta-PRS-Server

./: CMakeLists.txt  README.md  requirements.txt
prs-server/prs-server/: main.cpp
prs-server/prs-server.xcodeproj/: project.pbxproj
prs-server/prs-server.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
prs-server/prs-server.xcodeproj/project.xcworkspace/xcuserdata/kotah.xcuserdatad/: UserInterfaceState.xcuserstate
prs-server/prs-server.xcodeproj/xcuserdata/kotah.xcuserdatad/xcschemes/: xcschememanagement.plist
reference-data/: 1000genomes.pruned.bim  ancestry-snps.ids
src/: CMakeCache.txt  CMakeLists.txt  Genotypes.cpp  Genotypes.h  Helpers.cpp  Helpers.h  Individuals.cpp  Individuals.h  Makefile  Weights.cpp  Weights.h  app  cmake_install.cmake  combine.cpp  dose_chunker.cpp  main-with-gen.cpp  main.cpp  prs-calculator.cpp  run-toolchain.cpp  test-static.txt
src/ancestry/: Ancestry.cpp  Ancestry.h  anc-runner.txt  main.cpp  overall-runner.cpp  prep-study.txt  run-pca.txt
src/antiquated/: CMakeLists.txt
src/weight-formatter/: Options.cpp  Options.h  Variant.cpp  Variant.h  format-weights.cpp  main.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compare-results.cpp  test-ancestry.cpp  test-prs-tool.cpp  test-weights.cpp  testprs
tests/Data/: dosages_list.txt
tests/good/1KG/: chr10.dos.scores.txt  chr13.dos.scores.txt  chr14.dos.scores.txt  chr16.dos.scores.txt  chr17.dos.scores.txt  chr18.dos.scores.txt  chr19.dos.scores.txt  chr20.dos.scores.txt  chr21.dos.scores.txt  chr22.dos.scores.txt
tests/good/HUNT/: HUNT_chr15_dosages_pruned.scores.txt
tests/sample-results/: HEADTEST.txt  X830-plink-19-NODUPS.txt  chr-19-multi.txt  chr19-x830-415.txt  chr19-x830-CL.txt  imp-server-chr16-scores-X626.8-head10000both-ALLELESWAP.txt  imp-server-chr16-scores-X626.8-head10000both-PRINTED.txt  imp-server-chr16-scores-X626.8-head10000both.txt  imp-server-chr16-scores-X626.8.txt  testX626.8_chr16-FULL.txt  testX626.8_chr16-PARTIAL.txt
tests/test_01/: prs_compare.cmake
tests/test_01/good/: X830.REFERENCE.txt
